environments/rt-inventory-dev/apps/item-inventory/services/item-inventory/base/config/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: item-inventory
  name: item-inventory
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: item-inventory
